plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.cheatkey'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

bootJar {
	archiveFileName = 'cheatkey.jar'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	implementation 'com.mysql:mysql-connector-j:9.3.0'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'

	// JWT 라이브러리
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'

	// WebClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// File
	implementation 'net.coobird:thumbnailator:0.4.14'
	implementation 'commons-codec:commons-codec:1.15' // for sha256Hex

	// AWS S3
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.261'

	// 이미지 처리 라이브러리 (향후 리사이징용)
	implementation 'net.coobird:thumbnailator:0.4.14'

	// XSS 방지용
	implementation 'org.apache.commons:commons-text:1.11.0'
	implementation 'org.jsoup:jsoup:1.17.2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'software.amazon.awssdk:s3:2.29.44'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	// Caffeine 캐시 의존성 추가
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
}

tasks.named('test') {
	useJUnitPlatform()
}
